--- a/css/admin.css
+++ b/css/admin.css
@@ -32,10 +32,10 @@ body {
     align-items: center;
 }
 .welcome-message {
-    margin: 0 10px 0 0;
+    margin: 0 10px 0 0 !important;
     font-family: "Inter";
     font-weight: 600;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
 }
 .user-avatar {
     background-color: var(--spsu-color);
