--- a/css/admincontent.css
+++ b/css/admincontent.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+body {
+    margin: 0;
+    font-family: "Inter";
+}
+
 .content-section {
     display: none;
 }
@@ -86,3 +93,271 @@
     justify-content: center;
 }
 
+/* Pending request panel */
+
+.bt-icons {
+  color: var(--spsu-color);
+  font-size: 1.2rem;
+  margin-right: 5px;
+}
+
+.pr-container {
+  display: flex;
+  margin: auto;
+  margin-top: 20px;
+}
+
+.requests-panel {
+  width: 350px;
+  border: 1px solid #ddd;
+  color: #ffffff;
+  box-shadow: 0 0 12px 6px rgba(0, 0, 0, 0.05);
+
+}
+
+.requests-panel h2 {
+  margin: 0;
+  padding: 15px;
+  text-align: center;
+  font-size: 1.5em;
+  background-color: var(--spsu-color);
+}
+
+#requests-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  overflow-y: auto;
+  max-height: 500px;
+  color: black;
+}
+
+.req-details {
+  display: flex;
+  flex-direction: column;
+}
+.req-details > div {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#requests-list li {
+  padding: 15px;
+  border-bottom: 1px solid #ddd;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: flex;
+  justify-content: space-between;
+}
+
+#requests-list li:hover {
+  background: #f1f1f1;
+}
+
+.details-panel {
+  margin-left: 40px;
+  width: 720px;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 12px 6px rgba(0, 0, 0, 0.035);
+
+}
+
+.user-info {
+  display: flex;
+  justify-content: space-between;
+}
+.user-info p {
+  margin: 10px 0;
+  font-size: 1em;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+table, th, td {
+  border: 1px solid #ddd;
+}
+
+th, td {
+  padding: 12px;
+  text-align: left;
+}
+
+th {
+  background-color: var(--spsu-color) !important;
+  color: #fff;
+  font-weight: normal;
+}
+
+/* Radio btn css */
+
+.item-usage-time {
+  display: flex;
+  font-family: Arial, sans-serif;
+  margin: 20px;
+  align-items: center;
+}
+.usage-text {
+  padding-right: 20px;
+}
+.item-usage-time label {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.radio-group {
+  display: flex;
+  gap: 2px;
+}
+
+.custom-radio {
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 12px;
+}
+
+.custom-radio input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.custom-radio input[type="radio"]:checked ~ .radio-label {
+  background: var(--spsu-color);
+  color: white;
+}
+
+.custom-radio .radio-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25px;
+  height: 25px;
+  border: 2px solid var(--spsu-color);
+  background: white;
+  cursor: pointer;
+  user-select: none;
+  transition: background 0.3s, color 0.3s;
+}
+
+.custom-radio .radio-label:hover {
+  background: var(--spsu-color-dark);
+  color: white;
+}
+
+.action-buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.action-buttons button {
+  padding: 10px 20px;
+  margin-right: 10px;
+  border: none;
+  background: #ff0000;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+  font-weight: 600;
+}
+
+.action-buttons button:hover {
+  background: #d60000;
+}
+
+.action-buttons button:nth-child(2) {
+  background: #28a745;
+}
+
+.action-buttons button:nth-child(2):hover {
+  background: #218838;
+}
+
+/* Inventory page styling */
+.inventory-container {
+  display: flex;
+  margin: auto;
+  margin-top: 20px;
+}
+
+.sports-list {
+  width: 350px;
+  border: 1px solid #ddd;
+  color: #ffffff;
+  box-shadow: 0 0 12px 6px rgba(0, 0, 0, 0.05);
+}
+
+.sports-list h2 {
+  margin: 0;
+  padding: 15px;
+  text-align: center;
+  font-size: 1.5em;
+  background-color: var(--spsu-color);
+}
+
+#sports-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  overflow-y: auto;
+  max-height: 500px;
+  color: black;
+}
+
+#sports-list li {
+  padding: 15px;
+  border-bottom: 1px solid #ddd;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: flex;
+  justify-content: space-between;
+}
+
+#sports-list li:hover {
+  background: #f1f1f1;
+}
+
+.inventory-details {
+  margin-left: 40px;
+  width: 720px;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 12px 6px rgba(0, 0, 0, 0.035);
+}
+
+.inventory-details h2 {
+  margin-top: 0;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+table, th, td {
+  border: 1px solid #ddd;
+}
+
+th, td {
+  padding: 12px;
+  text-align: left;
+}
+
+th {
+  background-color: var(--spsu-color) !important;
+  color: #fff;
+  font-weight: normal;
+}
