--- a/css/admin/admincontent.css
+++ b/css/admin/admincontent.css
@@ -332,6 +332,8 @@ th {
   margin-left: 40px;
   width: 720px;
   padding: 20px;
+  max-height: 519px;
+  overflow-y: auto;
   background-color: #fff;
   border: 1px solid #ddd;
   box-shadow: 0 0 12px 6px rgba(0, 0, 0, 0.035);
