--- a/css/user/userpage.css
+++ b/css/user/userpage.css
@@ -1,8 +1,118 @@
+/* font imports */
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
+
 /* Dont Touch This #content */
 
 #content {
   display: none;
 }
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  text-decoration: none;
+  list-style: none;
+}
+
+
+/* Navbar CSS */
+
+.header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  box-shadow: 0 4px 20px hsla(207, 24%, 35%, 0.1);
+  background-color: #ffffff;
+  z-index: 1;
+  font-family: "Inter" !important;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 16px;
+}
+
+.logo img {
+  max-height: 60px;
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu a {
+  display: block;
+  padding: 7px 15px;
+  font-size: 17.5px;
+  font-weight: 500;
+  transition: 0.2s all ease-in-out;
+  color: #000000;
+}
+
+
+.menu a:hover {
+  opacity: 1;
+  color: var(--spsu-color);
+}
+
+.menu-icon {
+  display: none;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+#menu-toggle:checked ~ .menu {
+  transform: scale(1, 1);
+}
+
+@media only screen and (max-width: 950px) {
+  .header {
+    background-color: #000000;
+  }
+
+  .menu {
+    flex-direction: column;
+    background-color: #151418;
+    align-items: start;
+    position: absolute;
+    padding-top: 10px;
+    top: 78px;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    transform: scale(1, 0);
+    transform-origin: top;
+    transition: transform 0.3s ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  }
+
+  .menu a {
+    margin-left: 12px;
+    color: white;
+  }
+
+  .menu li {
+    margin-bottom: 10px;
+  }
+
+  .menu-icon {
+    display: block;
+    color: #fff;
+    font-size: 28px;
+    cursor: pointer;
+  }
+}
+
+
 
 /* other CSS */
 
@@ -12,23 +122,43 @@ body {
   padding: 0;
 }
 
-#sports-container, #items-container {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 20px;
+#sports-container {
+  display: grid;
+  padding: 15px;
+  grid-template-columns: 47% auto;
+  column-gap: 15px;
+  row-gap: 15px;
+}
+
+.poetsen-one-regular {
+  font-family: "Poetsen One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .sport-card {
   border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 20px;
-  margin: 10px;
+  border-radius: 10px;
+  padding: 15px;
   cursor: pointer;
+  background: radial-gradient(circle, rgba(254,183,28,1) 0%, rgba(191,154,0,1) 100%);
   transition: background-color 0.3s;
+  height: 150px;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  align-content: end;
+  
 }
 
 .sport-card:hover {
   background-color: #f0f0f0;
+}
+
+#items-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px;
 }
 
 .item-div {
