--- a/css/user/userpage.css
+++ b/css/user/userpage.css
@@ -125,7 +125,7 @@ body {
 #sports-container {
   display: grid;
   padding: 15px;
-  grid-template-columns: 47% auto;
+  grid-template-columns: 48% auto;
   column-gap: 15px;
   row-gap: 15px;
 }
@@ -137,11 +137,10 @@ body {
 }
 
 .sport-card {
-  border: 1px solid #ccc;
   border-radius: 10px;
   padding: 15px;
   cursor: pointer;
-  background: radial-gradient(circle, rgba(254,183,28,1) 0%, rgba(191,154,0,1) 100%);
+  background: var(--user-sp-card-back);
   transition: background-color 0.3s;
   height: 150px;
   color: white;
@@ -155,10 +154,38 @@ body {
   background-color: #f0f0f0;
 }
 
+.title-holder {
+  padding-bottom: 15px;
+}
+
+.title {
+  border-radius: 10px;
+  padding: 15px;
+  background: var(--user-sp-card-back);
+  height: 100px;
+  color: white;
+  text-align: center;
+  align-content: end;
+}
+
+.title > span {
+  font-size: 28px;
+}
+
+.check-out-title {
+  border-top: 2px solid #a0a0a0;
+  border-bottom: 2px solid #a0a0a0;
+  padding-bottom: 4px;
+  padding-top: 3px;
+  padding-left: 5px;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
 #items-container {
   display: flex;
   flex-wrap: wrap;
-  padding: 20px;
+  padding: 12px;
 }
 
 .item-div {
