--- a/css/user/userpage.css
+++ b/css/user/userpage.css
@@ -81,13 +81,17 @@ nav {
     background-color: #000000;
   }
 
+  .logo a img {
+    height: 40px;
+  }
+
   .menu {
     flex-direction: column;
     background-color: #151418;
     align-items: start;
     position: absolute;
     padding-top: 10px;
-    top: 78px;
+    top: 60px;
     left: 0;
     width: 100%;
     z-index: 1;
@@ -183,7 +187,7 @@ body {
   border-radius: 10px;
   padding: 15px;
   background: var(--user-sp-card-back);
-  height: 100px;
+  height: 115px;
   color: white;
   text-align: center;
   align-content: end;
