--- a/css/user/userpage.css
+++ b/css/user/userpage.css
@@ -114,7 +114,7 @@ nav {
 }
 
 .logo img {
-  max-height: 60px;
+  max-height: 40px;
 }
 
 .menu {
@@ -132,7 +132,6 @@ nav {
   color: #000000;
 }
 
-
 .menu a:hover {
   opacity: 1;
   color: var(--spsu-color);
@@ -144,15 +143,17 @@ nav {
 
 #menu-toggle {
   display: none;
+  padding-bottom: 5px;
 }
 
 #menu-toggle:checked ~ .menu {
-  transform: scale(1, 1);
+  transform: translateX(0);
 }
 
 @media only screen and (max-width: 950px) {
   .header {
-    background-color: #000000;
+    background-color: #0A0A0A;
+    box-shadow: 0px 2px 5px 0px rgba(56,56,56,0.51);
   }
 
   .logo a img {
@@ -161,18 +162,18 @@ nav {
 
   .menu {
     flex-direction: column;
-    background-color: #151418;
+    background-color: #0A0A0A;
     align-items: start;
-    position: absolute;
-    padding-top: 10px;
-    top: 60px;
+    position: fixed;
+    top: 0;
     left: 0;
-    width: 100%;
-    z-index: 1;
-    transform: scale(1, 0);
-    transform-origin: top;
-    transition: transform 0.3s ease-in-out;
+    height: 100%;
+    width: 250px;
+    padding-top: 60px;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease-in-out;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    z-index: 2;
   }
 
   .menu a {
@@ -189,6 +190,26 @@ nav {
     color: #fff;
     font-size: 28px;
     cursor: pointer;
+  }
+
+  .close-menu {
+    display: none !important;
+    font-size: 18px !important;
+    padding: 8px !important;
+    margin-left: auto;
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    position: absolute;
+    background-color: #0A0A0A;
+    border-radius: 8px;
+    border: 1px solid white;
+    left: 220px;
+  }
+
+  #menu-toggle:checked ~ .menu .close-menu {
+    display: block !important;
+
   }
 }
 
@@ -217,6 +238,8 @@ body {
 .card-text {
   position: relative;
   top: -25%;
+  font-size: 16px !important;
+  text-shadow: black 0.1em 0.1em 0.2em
 }
 
 .poetsen-one-regular {
@@ -255,6 +278,7 @@ body {
   font-size: 18px;
   text-align: center;
   align-content: end;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   
 }
 
