--- a/css/user/userpage.css
+++ b/css/user/userpage.css
@@ -165,11 +165,13 @@ nav {
     background-color: #0A0A0A;
     align-items: start;
     position: fixed;
+    justify-content: unset;
     top: 0;
     left: 0;
     height: 100%;
+    color: white;
     width: 250px;
-    padding-top: 60px;
+    padding: 15px;
     transform: translateX(-100%);
     transition: transform 0.5s ease-in-out;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -177,8 +179,8 @@ nav {
   }
 
   .menu a {
-    margin-left: 12px;
     color: white;
+    padding: 0px;
   }
 
   .menu li {
@@ -192,6 +194,64 @@ nav {
     cursor: pointer;
   }
 
+  
+
+  #menu-toggle:checked ~ .menu .close-menu {
+    display: block !important;
+
+  }
+
+  .user-profile {
+    display: flex;
+    padding: 15px;
+    width: 100%;
+    align-items: center;
+    padding-bottom: 25px;
+    border-bottom: 1px solid #D9D9D9;
+  }
+
+  .user-icon i {
+    background: radial-gradient(circle, rgba(254,164,14,1) 87%, rgba(152,98,8,1) 100%);
+    display: flex;
+    border-radius: 50%;
+    justify-content: center;
+    padding: 8px;
+    font-size: 48px;
+  }
+
+  .user-info {
+    margin-left: 15px;
+  }
+  .user-info p:nth-child(2) {
+    padding-top: 5px;
+  }
+
+  .nav-holder {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 12px;
+    height: 78%;
+    border-bottom: 1px solid #D9D9D9;
+  }
+  .nav-title {
+    font-size: 12px !important;
+    opacity: 80%;
+  }
+  .nav-items {
+    padding-left: 5px;
+  }
+  .nav-items li a i {
+    padding-right: 10px;
+    font-size: 20px;
+  }
+  .nav-items li {
+    align-items: center;
+    margin-bottom: 15px;
+  }
+  .menu a:hover {
+    color: white;
+  }
   .close-menu {
     display: none !important;
     font-size: 18px !important;
@@ -202,14 +262,41 @@ nav {
     text-decoration: none;
     position: absolute;
     background-color: #0A0A0A;
-    border-radius: 8px;
+    border-radius: 10px;
     border: 1px solid white;
-    left: 220px;
+    left: 230px;
+    top: 50%;
   }
-
-  #menu-toggle:checked ~ .menu .close-menu {
-    display: block !important;
-
+  .close-menu i {
+    padding: 0px !important;
+  }
+  .pow-by {
+    display: flex;
+    align-self: center;
+    margin-top: 140%;
+    font-size: 14px !important;
+    text-align: center;
+    opacity: 80%;
+  }
+  .pow-by i {
+    font-size: 12px;
+    opacity: 100%;
+    color: #ffa500;
+  }
+  .logout-holder a i {
+    padding-right: 10px;
+    font-size: 20px;
+  }
+  .logout-holder {
+    justify-content: center;
+    display: flex;
+    width: 100%;
+    padding: 15px;
+  }
+  .logout-holder a {
+    text-align: center;
+    display: flex;
+    align-items: center;
   }
 }
 
